--- a/Hex/Info.plist
+++ b/Hex/Info.plist
@@ -8,7 +8,7 @@
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>KronaOne-Regular.tff</string>
+		<string>KronaOne-Regular.ttf</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
