Moved back button to the top of the how to play view.

--- a/Hex/Info.plist
+++ b/Hex/Info.plist
@@ -9,6 +9,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>KronaOne-Regular.ttf</string>
+		<string>DotGothic16-Regular.ttf</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
