--- a/Hex/GoogleService-Info.plist
+++ b/Hex/GoogleService-Info.plist
@@ -30,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:501237286897:ios:5ca135afa74d9226546650</string>
+	<key>DATABASE_URL</key>
+	<string>https://hex-game-80370-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
