--- a/Hex/GoogleService-Info.plist
+++ b/Hex/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>501237286897-pf6khl8cos51llfim0cd5viqpu52ut8o.apps.googleusercontent.com</string>
+	<string>501237286897-m06la8i9b6vsm021eqarm3ba41o4lefb.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.501237286897-pf6khl8cos51llfim0cd5viqpu52ut8o</string>
+	<string>com.googleusercontent.apps.501237286897-m06la8i9b6vsm021eqarm3ba41o4lefb</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBQUAyf5Wg9PGqOlmWIBmLEKDqV0WST8vQ</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>GD.hex</string>
+	<string>com.GD.hex</string>
 	<key>PROJECT_ID</key>
 	<string>hex-game-80370</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:501237286897:ios:5ca135afa74d9226546650</string>
+	<string>1:501237286897:ios:fa08661274eb90db546650</string>
 	<key>DATABASE_URL</key>
 	<string>https://hex-game-80370-default-rtdb.firebaseio.com</string>
 </dict>
