Implement invite friends button

--- a/Hex/Info.plist
+++ b/Hex/Info.plist
@@ -21,9 +21,23 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>FB</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb2907062046182795</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>Bundle ID</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.GD.hex</string>
 			</array>
 		</dict>
 	</array>
