--- a/functions/package.json
+++ b/functions/package.json
@@ -15,12 +15,14 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "uuid4": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.0",
+    "node": "^12.22.1"
   },
   "private": true
 }
